[package]
name = "tups"
description = "Tups, the tuple stream transformer"
version = "0.0.4"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/broadinstitute/dast"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.8.1"
clap = { version = "3.2.22", features = ["cargo"] }
jati = { git = "https://github.com/broadinstitute/jati", rev = "a4fed24" }
